# gameboy_emulator

./: CMakeLists.txt  emulator.cpp
docs/: resources.txt
include/: cpu.hpp  flagsregister.hpp  instruction.hpp  memorybus.hpp  registers.hpp
tests/: cpu_tests.cpp  flags_register_tests.cpp  flags_register_tests.cpp.cpp  instruction_tests.cpp  register_tests.cpp
